# cmake-examples

./: README.md
library_example/: CMakeLists.txt
library_example/src/: module.c
library_example/test/: main.c  memcheck.py
simple_example/: CMakeLists.txt
simple_example/include/: module.h
simple_example/src/: main.c
